--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,21 +6,23 @@ jobs:
     - image: circleci/node:10.16.3
     steps:
     - checkout
-    - run:
-        name: update-npm
-        command: 'sudo npm install -g npm@5'
-    - restore_cache:
-        key: dependency-cache-{{ checksum "package-lock.json" }}
-    - run:
-        name: install-npm-wee
-        command: npm install
-    - save_cache:
-        key: dependency-cache-{{ checksum "package-lock.json" }}
-        paths:
-        - ./node_modules
-    - run:
-        name: test
-        command: npm test
+    - run: echo "$DOCKER_USER"
+    - run: echo "$DOCKER_PASS"
+    #- run:
+    #    name: update-npm
+    #    command: 'sudo npm install -g npm@5'
+    #- restore_cache:
+    #    key: dependency-cache-{{ checksum "package-lock.json" }}
+    #- run:
+    #    name: install-npm-wee
+    #    command: npm install
+    #- save_cache:
+    #    key: dependency-cache-{{ checksum "package-lock.json" }}
+    #    paths:
+    #    - ./node_modules
+    #- run:
+    #    name: test
+    #    command: npm test
     #- run:
     #    name: code-coverage
     #    command: './node_modules/.bin/nyc report --reporter=text-lcov'
