--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,15 @@ jobs:
     - image: circleci/node:10.16.3
     steps:
     - checkout
-    - run: echo "$DOCKER_USER"
-    - run: echo "$DOCKER_PASS"
+    - run:
+        name: docker-login
+        command: echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
+    - run:
+        name: build-docker-image
+        command: docker build -t khalilnouisser/metrics-api .
+    - run:
+        name: push-docker-image
+        command: docker push khalilnouisser/metrics-api
     #- run:
     #    name: update-npm
     #    command: 'sudo npm install -g npm@5'
