--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,19 @@ jobs:
     steps:
     - checkout
     - run:
-        name: docker-login
-        command: echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
+        name: Install Docker client
+        command: |
+          set -x
+          VER="17.03.0-ce"
+          curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
+          tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+          mv /tmp/docker/* /usr/bin
     - run:
         name: build-docker-image
         command: docker build -t khalilnouisser/metrics-api .
+    - run:
+        name: docker-login
+        command: echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
     - run:
         name: push-docker-image
         command: docker push khalilnouisser/metrics-api
