--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,14 +6,7 @@ jobs:
     - image: circleci/node:10.16.3
     steps:
     - checkout
-    - run:
-        name: Install Docker client
-        command: |
-          set -x
-          VER="17.03.0-ce"
-          curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
-          tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-          mv /tmp/docker/* /usr/bin
+    - run: ls -l
     - run:
         name: build-docker-image
         command: docker build -t khalilnouisser/metrics-api .
