--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,7 @@ version: 2
 jobs:
   build:
     working_directory: ~/repo
-    docker:
-    - image: circleci/node:10.16.3
+    machine: true
     steps:
     - checkout
     - run: ls -l
